# recard

./: LICENSE  README.md
backend/: .gitignore  Cargo.toml
backend/migrations/: 20250323140555_create_users.sql
backend/src/: main.rs
backend/src/database/: mod.rs
backend/src/interface/: mod.rs
backend/src/model/: card.rs  deck.rs  mod.rs  user.rs
