[package]
name = "recard-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dotenvy = "0.15.7"
env_logger = "0.11.7"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres"] }
uuid = { version = "1.16.0", features = ["v4"] }
